When inserting a col into a colgroup after a col with span, insert it after the last columnframe spanned by the span.  Bug 404301, r=bernd, sr=roc, a=schrep